# qrcast

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.sh  env.yml  gradle.properties  make_icon.py  pyproject.toml  requirements.txt
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
docs/: BUILD_PLAN.md  CLI.md  README.md  architecture.md  camera-scan-review.md  design-notes.md  flutter_build_troubleshooting.md  fps-analysis.md  icon_design_philosophy.md  native-android-migration.md  payload-v2-spec.md  protocol-spec.md  rgb-mode-todo.md  v1_bw_fixed.md  v2_bw_configurable.md  v3_rgb_qr.md
docs/superpowers/plans/: 2026-07-03-monorepo-integration.md
docs/superpowers/specs/: 2026-07-03-monorepo-integration-design.md
qrcast/: __init__.py  camera_test.py  cli.py  common.py  pyminify.py
qrcast/bw/: __init__.py  gen_individual_all_in_one.py  verifier.py
qrcast/rgb/: receiver_bin2.py
qrcast/v3/: __init__.py  generator_bin.py  generator_bin2.py  receiver_bin.py  receiver_text.py  verifier_bin.py  verifier_bin2.py  verifier_text.py
receiver-android/: gradle.properties  settings.gradle.kts
receiver-android/app/: build.gradle.kts
scripts/: display.py  test_camera.py  v1_generate.py  v1_verify_grid.py  v2_generate.py  v2_quick_send.py  v2_verify.py  v3_generate_bin.py  v3_generate_text.py  v3_verify_bin.py  v3_verify_text.py
sender/: env.yml  gen_and_display.bat  test_qrcode_leading_zero.py
sender/docs/: v2_bw_configurable.md  v3_rgb_qr.md
sender/qrcast/: __main__.py  cli.py
tests/: test_v2_roundtrip.py
(+55 files in other folders)
